--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,11 @@
+---
+const { title } = Astro.props;
+---
+
 <!doctype html>
 <html lang="es">
   <head>
-    <title>Curriculum vitae</title>
+    <title>{title}</title>
 
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=7" />
