--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,11 @@
 ---
 import Layout from "@/layouts/Layout.astro";
+
+import Hero from "@/components/sections/Hero.astro";
 ---
 
-<Layout title="curriculum vitae" />
+<Layout title="curriculum vitae">
+  <main class="p-8 md:p-16">
+    <Hero />
+  </main>
+</Layout>
