--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,12 @@
 import Layout from "@/layouts/Layout.astro";
 
 import Hero from "@/components/sections/Hero.astro";
+import Contact from "@/components/sections/Contact.astro";
 ---
 
 <Layout title="curriculum vitae">
   <main class="p-8 md:p-16">
     <Hero />
+    <Contact />
   </main>
 </Layout>
