feat: add About section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,13 @@ import Layout from "@/layouts/Layout.astro";
 
 import Hero from "@/components/sections/Hero.astro";
 import Contact from "@/components/sections/Contact.astro";
+import About from "@/components/sections/About.astro";
 ---
 
 <Layout title="curriculum vitae">
   <main class="p-8 md:p-16">
     <Hero />
     <Contact />
+    <About />
   </main>
 </Layout>
