feat: add Experience section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Layout from "@/layouts/Layout.astro";
 import Hero from "@/components/sections/Hero.astro";
 import Contact from "@/components/sections/Contact.astro";
 import About from "@/components/sections/About.astro";
+import Experience from "@/components/sections/Experience.astro";
 ---
 
 <Layout title="curriculum vitae">
@@ -11,5 +12,6 @@ import About from "@/components/sections/About.astro";
     <Hero />
     <Contact />
     <About />
+    <Experience />
   </main>
 </Layout>
