feat: add Education section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Hero from "@/components/sections/Hero.astro";
 import Contact from "@/components/sections/Contact.astro";
 import About from "@/components/sections/About.astro";
 import Experience from "@/components/sections/Experience.astro";
+import Education from "@/components/sections/Education.astro";
 ---
 
 <Layout title="curriculum vitae">
@@ -13,5 +14,6 @@ import Experience from "@/components/sections/Experience.astro";
     <Contact />
     <About />
     <Experience />
+    <Education />
   </main>
 </Layout>
