feat: add Projects section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Contact from "@/components/sections/Contact.astro";
 import About from "@/components/sections/About.astro";
 import Experience from "@/components/sections/Experience.astro";
 import Education from "@/components/sections/Education.astro";
+import Projects from "@/components/sections/Projects.astro";
 ---
 
 <Layout title="curriculum vitae">
@@ -15,5 +16,6 @@ import Education from "@/components/sections/Education.astro";
     <About />
     <Experience />
     <Education />
+    <Projects />
   </main>
 </Layout>
