--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import About from "@/components/sections/About.astro";
 import Experience from "@/components/sections/Experience.astro";
 import Education from "@/components/sections/Education.astro";
 import Projects from "@/components/sections/Projects.astro";
+import Skills from "@/components/sections/Skills.astro";
 ---
 
 <Layout title="curriculum vitae">
@@ -17,5 +18,6 @@ import Projects from "@/components/sections/Projects.astro";
     <Experience />
     <Education />
     <Projects />
+    <Skills />
   </main>
 </Layout>
