--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,4 +20,9 @@ import Skills from "@/components/sections/Skills.astro";
     <Projects />
     <Skills />
   </main>
+  <footer
+    class="w-full text-center absolute p-2 bottom-0 left-1/2 -translate-x-1/2 text-xs print:hidden"
+  >
+    curriculum vitae realizado con Astro y Tailwind
+  </footer>
 </Layout>
