feat: add Footer section and dark mode

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Experience from "@/components/sections/Experience.astro";
 import Education from "@/components/sections/Education.astro";
 import Projects from "@/components/sections/Projects.astro";
 import Skills from "@/components/sections/Skills.astro";
+import Footer from "@/components/sections/Footer.astro";
 ---
 
 <Layout title="curriculum vitae">
@@ -19,10 +20,6 @@ import Skills from "@/components/sections/Skills.astro";
     <Education />
     <Projects />
     <Skills />
+    <Footer />
   </main>
-  <footer
-    class="w-full text-center absolute p-2 bottom-0 left-1/2 -translate-x-1/2 text-xs print:hidden"
-  >
-    curriculum vitae realizado con Astro y Tailwind
-  </footer>
 </Layout>
