--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
       href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css"
     />
   </head>
-  <body class="relative font-mono text-gray-500">
-    <slot />
+  <body class="relative font-mono bg-gray-100 text-gray-500">
+      <slot />
   </body>
 </html>
