--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -15,8 +15,7 @@ import { projects } from "@cv";
                 href={url}
                 target="_blank"
                 title={`Ver el proyecto ${name}`}
-                class="rounded-md border border-gray-200 flex flex-col gap-8 p-4 h-full group transition-shadow duration-300 hover:border-0 hover:shadow-lg
-                hover:shadow-gray-400"
+                class="rounded-md border border-gray-200 flex flex-col gap-8 p-4 h-full group transition-shadow duration-300 hover:border-0 hover:shadow-lg hover:shadow-gray-400"
               >
                 <header>
                   <div class="text-gray-800 flex flex-row gap-3 items-center">
