--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="stylesheet" href="/src/styles/global.css" />
+    <link rel="stylesheet" href="../styles/global.css" />
 
     <link
       rel="stylesheet"
@@ -23,6 +23,6 @@ const { title } = Astro.props;
     />
   </head>
   <body class="relative font-mono bg-gray-100 text-gray-500">
-      <slot />
+    <slot />
   </body>
 </html>
