style: remove small text class in subject list

--- a/src/components/sections/Education.astro
+++ b/src/components/sections/Education.astro
@@ -42,7 +42,7 @@ import { education } from "@cv";
                   <p>{area}</p>
                   <ul class="list-disc list-inside">
                     {subjects?.map((subject) => (
-                      <li class="text-sm">{subject}</li>
+                      <li>{subject}</li>
                     ))}
                   </ul>
                 </footer>
