style: add border to project and skill elements

--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -29,7 +29,7 @@ import { projects } from "@cv";
                 <footer class="flex flex-wrap gap-4">
                   {highlights.map((highlight) => {
                     return (
-                      <span class="px-2 py-1 rounded-md text-gray-800 bg-gray-200 text-xs">
+                      <span class="px-2 py-1 rounded-md text-gray-800 bg-gray-200 border border-gray-200 text-xs">
                         {highlight}
                       </span>
                     );
