--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Skills from "@/components/sections/Skills.astro";
 import Footer from "@/components/sections/Footer.astro";
 ---
 
-<Layout title="curriculum vitae">
+<Layout>
   <main class="p-8 md:p-16">
     <Hero />
     <Contact />
