--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -13,7 +13,7 @@ const { profiles, email } = basics;
       title={`Enviar email a ${email}`}
       target="_blank"
       rel="noopener noreferrer"
-      class="flex items-center gap-1 px-2 py-1 border border-gray-200 rounded-md transition-colors duration-300 hover:text-gray-800 hover:bg-gray-200"
+      class="flex items-center gap-1 px-2 py-1 hover:px-4 border border-gray-200 rounded-md transition-all duration-300 hover:text-gray-800 hover:bg-gray-200"
     >
       <i class="ti ti-mail"></i>
       {email}
@@ -26,7 +26,7 @@ const { profiles, email } = basics;
           title={`Perfil de ${network}`}
           target="_blank"
           rel="noopener noreferrer"
-          class="flex items-center gap-1 px-2 py-1 rounded-md border border-gray-200 hover:text-gray-800 hover:bg-gray-200 transition-colors duration-300"
+          class="flex items-center gap-1 px-2 py-1 hover:px-4 rounded-md border border-gray-200 hover:text-gray-800 hover:bg-gray-200 transition-all duration-300"
         >
           <i class={`ti ti-brand-${network.toLowerCase()}`} />
           {username}
