--- a/src/components/sections/Education.astro
+++ b/src/components/sections/Education.astro
@@ -20,7 +20,7 @@ import { education } from "@cv";
                 <header class="flex flex-col md:flex-row print:flex-row justify-between text-gray-800">
                   <div class="flex flex-row gap-3 items-center">
                     <a
-                      class="hover:underline"
+                      class="hover:font-semibold hover:tracking-wider hover:underline underline-offset-4 transition-all duration-300"
                       href={url}
                       title={`Ir a la web de ${institution}`}
                       target="_blank"
