--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -6,7 +6,7 @@ import Section from "@/components/Section.astro";
   <footer class="print:hidden">
     <button
       id="theme-toggle"
-      class="fixed bottom-0 right-0 m-10 p-3 rounded-full bg-black text-white text-5xl hover:cursor-pointer hover:bg-gray-800"
+      class="w-16 h-16 rounded-full flex items-center justify-center fixed bottom-0 right-0 m-10 p-10 bg-black text-white text-5xl hover:rotate-360 hover:cursor-pointer hover:bg-gray-800 transition-all duration-500"
     >
       <i class="ti ti-moon"></i>
     </button>
@@ -25,6 +25,18 @@ import Section from "@/components/Section.astro";
 
   const toggleButton = document.getElementById("theme-toggle");
   const icon = toggleButton?.querySelector("i");
+
+  toggleButton?.addEventListener("mouseover", () => {
+    icon?.classList.contains("ti-moon")
+      ? icon?.classList.replace("ti-moon", "ti-sun")
+      : icon?.classList.replace("ti-sun", "ti-moon");
+  });
+
+  toggleButton?.addEventListener("mouseout", () => {
+    icon?.classList.contains("ti-moon")
+      ? icon?.classList.replace("ti-moon", "ti-sun")
+      : icon?.classList.replace("ti-sun", "ti-moon");
+  });
 
   toggleButton?.addEventListener("click", () => {
     html.classList.toggle("toggle-invert");
