--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -14,7 +14,7 @@ const { address } = location;
     <img
       src={image}
       alt={name}
-      class="block aspect-square object-cover w-44 md:w-32 print:w-28 rounded-full hover:cursor-pointer hover:shadow-lg hover:shadow-gray-400"
+      class="block aspect-square object-cover w-44 md:w-32 print:w-28 rounded-full hover:cursor-pointer hover:shadow-lg hover:shadow-gray-500 transition-all duration-300"
       loading="lazy"
     />
 
@@ -29,18 +29,18 @@ const { address } = location;
       >
         <span
           id="address"
-          class="inline-flex items-center gap-1 text-sm transition-colors duration-200 hover:text-black hover:cursor-pointer"
+          class="group inline-flex items-center gap-1 text-sm transition-colors duration-300 hover:text-black hover:cursor-pointer"
         >
           <i class="ti ti-world"></i>
-          {address}
+          <span class="group-hover:underline underline-offset-4">{address}</span>
         </span>
 
         <span
           id="birthDate"
-          class="inline-flex items-center gap-1 text-sm transition-colors duration-200 hover:text-black hover:cursor-pointer"
+          class="group inline-flex items-center gap-1 text-sm transition-colors duration-300 hover:text-black hover:cursor-pointer"
         >
           <i class="ti ti-cake"></i>
-          {birthDate}
+          <span class="group-hover:underline underline-offset-4">{birthDate}</span>
         </span>
       </footer>
     </div>
