--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -15,11 +15,11 @@ import { projects } from "@cv";
                 href={url}
                 target="_blank"
                 title={`Ver el proyecto ${name}`}
-                class="rounded-md border border-gray-200 flex flex-col gap-8 p-4 h-full group transition-shadow duration-300 hover:border-0 hover:shadow-lg hover:shadow-gray-400"
+                class="rounded-md border border-gray-200 flex flex-col gap-8 p-4 h-full group transition-all duration-300 hover:border-gray-700 hover:shadow-lg hover:shadow-gray-500"
               >
                 <header>
                   <div class="text-gray-800 flex flex-row gap-3 items-center">
-                    <span class="group-hover:underline">{name}</span>
+                    <span class="group-hover:underline underline-offset-4">{name}</span>
                     {isActive && <span class="text-green-500">•</span>}
                     {github && <i class="ti ti-brand-github" />}
                   </div>
