fix: update shadow transition

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -14,7 +14,7 @@ const { address } = location;
     <img
       src={image}
       alt={name}
-      class="block aspect-square object-cover w-44 md:w-32 print:w-28 rounded-full hover:cursor-pointer hover:shadow-lg hover:shadow-gray-500 transition-all duration-300"
+      class="block aspect-square object-cover w-44 md:w-32 print:w-28 rounded-full hover:cursor-pointer hover:shadow-lg hover:shadow-gray-500 transition-shadow duration-300"
       loading="lazy"
     />
 
