chore: update meta keywords

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ const title = "Héctor Olivares Sánchez";
 const description =
   "Portfolio actualizado de Héctor Olivares Sánchez. Desarrollador de Aplicaciones Web y Multiplataforma, Especializado en Inteligencia Artificial y Big Data";
 const keywords =
-  "Héctor Olivares Sánchez, hectorolisan, curriculum, cv, portfolio";
+  "Héctor Olivares Sánchez, hector olivares sanchez, hectorolisan, curriculum, cv, portfolio, web, developer"
 const url = "https://hectorolisan.is-a.dev";
 const image = "/cover.png";
 ---
